# NutritionLabelMaker

./: .env  README.md  __init__.py  app.py  breh.ipynb  food.py  food_cache.pkl  food_getter.py  pyproject.toml
agents/: __init__.py  breh.ipynb  food_search_agent.py  food_search_agent_old.py  food_search_funcs.py  food_searcher.py  nutrition_agent.py
agents/tools/: food_search_funcs.py  label_maker.py  nutrition_tools.py
backend/agents/: nutrition_agent.py
backend/agents/tools/label/: label_tools.py
backend/agents/tools/nutrition/: nutrition_tools.py
backend/api/: main.py
backend/utils/: s3_client.py
images/: image_maker.py  image_testing.ipynb
miscallaneous/: brehhhhhhhhhhhh.csv  food_getter.py
miscallaneous/images/: image_testing.ipynb
