[project]
name = "NutritionLabelMaker"
version = "0.1.0"
description = ""
authors = [
    {name = "Nathan",email = "nathanglen@ufl.edu"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "langchain (>=0.3.14,<0.4.0)",
    "langchain-openai (>=0.3.0,<0.4.0)",
    "langgraph (>=0.2.62,<0.3.0)",
    "grandalf (>=0.8,<0.9)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "python-levenshtein (>=0.26.1,<0.27.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "altair (==4)",
    "streamlit (>=1.42.1,<2.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
